2008-12-08 Updated spectral methods (psd, csd, etc.) to scale one-sided
           densities by a factor of 2 and, optionally, scale all densities
           by the sampling frequency.  This gives better MatLab
           compatibility. -RM

2008-12-08 Fixed alignment of ticks in colorbars. -MGD

2008-12-07 drop the deprecated "new" keyword of np.histogram() for
           numpy 1.2 or later.  -JJL

2008-12-06 Fixed a bug in svg backend that new_figure_manager()
           ignores keywords arguments such as figsize, etc. -JJL

2008-12-05 Fixed a bug that the handlelength of the new legend class
           set too short when numpoints=1 -JJL

2008-12-04 Added support for data with units (e.g. dates) to
           Axes.fill_between. -RM

2008-12-04 Added fancybox keyword to legend. Also applied some changes
           for better look, including baseline adjustment of the
           multiline texts so that it is center aligned. -JJL

2008-12-02 The transmuter classes in the patches.py are reorganized as
           subclasses of the Style classes. A few more box and arrow
           styles are added. -JJL

2008-12-02 Fixed a bug in the new legend class that didn't allowed
           a tuple of coordinate vlaues as loc. -JJL

2008-12-02 Improve checks for external dependencies, using subprocess
           (instead of deprecated popen*) and distutils (for version
           checking) - DSD

2008-11-30 Reimplementaion of the legend which supports baseline alignement,
           multi-column, and expand mode. - JJL

2008-12-01 Fixed histogram autoscaling bug when bins or range are given
           explicitly (fixes Debian bug 503148) - MM

2008-11-25 Added rcParam axes.unicode_minus which allows plain hypen
           for minus when False - JDH

2008-11-25 Added scatterpoints support in Legend. patch by Erik
           Tollerud - JJL

2008-11-24 Fix crash in log ticking. - MGD

2008-11-20 Added static helper method BrokenHBarCollection.span_where